@@ -2,7 +2,8 @@
 
 === Edge
 
-* Correct typo in config/boot.rb [Sean Cribbs]
+* Correct rendering error in extensions controller. [Sean Cribbs]
+* Correct typo in config/boot.rb. [Sean Cribbs]
 * Major refactoring and simplification of LoginSystem. [Sean Cribbs]
 * Update Haml to 2.0.7. [Sean Cribbs]
 * Upgrade to Rails 2.2.2. [Sean Cribbs]
